--- a/reponsive/html/main.html
+++ b/reponsive/html/main.html
@@ -12,9 +12,7 @@
 
 <header class="header">
   <div class="inner-box">
-    <h1 class="logo">
-      <img src="../images/logo.png" alt="TANKUS" />
-    </h1>
+    <h1 class="logo">TANKUS</h1>
     <nav class="gnb">
       <ul class="gnb-list">
         <li class="gnb-list-item"><a href="#" class="gnb-list-link">BRAND</a></li>
@@ -22,13 +20,14 @@
         <li class="gnb-list-item"><a href="#" class="gnb-list-link">MEDIA</a></li>
       </ul>
     </nav>
+    <button type="button" class="gnb-toggle"><span>gnb toggle</span></button>
   </div>
 </header>
 
 <section class="main-visual">
   <div class="inner-box">
     <!-- 이미지 사이즈가 비율 유지되면서 변경되어야 할 때 : img 태그를 사용하는 것이 유리 -->
-    <img src="../images/main_visual.jpg" alt="" class="main-visual-img"/>
+    <img src="../images/main_visual.jpg" alt="" class="main-visual-img" />
   </div>
 </section>
 
@@ -36,30 +35,22 @@
   <div class="inner-box inner-text">
     <dl class="def-list">
       <dt class="def-list-title">반응형 웹</dt>
-      <dd class="def-list-data">
-        A List Apart에서 Ethan Marcotte에 의해 처음 정의된 반응형 웹 디자인은 사용자와 그들이 사용하는 기기의 요구사항에 맞게 반응합니다.
-      </dd>
+      <dd class="def-list-data">A List Apart에서 Ethan Marcotte에 의해 처음 정의된 반응형 웹 디자인은 사용자와 그들이 사용하는 기기의 요구사항에 맞게 반응합니다.</dd>
     </dl>
 
     <dl class="def-list">
       <dt class="def-list-title">반응형 웹</dt>
-      <dd class="def-list-data">
-        A List Apart에서 Ethan Marcotte에 의해 처음 정의된 반응형 웹 디자인은 사용자와 그들이 사용하는 기기의 요구사항에 맞게 반응합니다.
-      </dd>
+      <dd class="def-list-data">A List Apart에서 Ethan Marcotte에 의해 처음 정의된 반응형 웹 디자인은 사용자와 그들이 사용하는 기기의 요구사항에 맞게 반응합니다.</dd>
     </dl>
 
     <dl class="def-list">
       <dt class="def-list-title">반응형 웹</dt>
-      <dd class="def-list-data">
-        A List Apart에서 Ethan Marcotte에 의해 처음 정의된 반응형 웹 디자인은 사용자와 그들이 사용하는 기기의 요구사항에 맞게 반응합니다.
-      </dd>
+      <dd class="def-list-data">A List Apart에서 Ethan Marcotte에 의해 처음 정의된 반응형 웹 디자인은 사용자와 그들이 사용하는 기기의 요구사항에 맞게 반응합니다.</dd>
     </dl>
 
     <dl class="def-list">
       <dt class="def-list-title">반응형 웹</dt>
-      <dd class="def-list-data">
-        A List Apart에서 Ethan Marcotte에 의해 처음 정의된 반응형 웹 디자인은 사용자와 그들이 사용하는 기기의 요구사항에 맞게 반응합니다.
-      </dd>
+      <dd class="def-list-data">A List Apart에서 Ethan Marcotte에 의해 처음 정의된 반응형 웹 디자인은 사용자와 그들이 사용하는 기기의 요구사항에 맞게 반응합니다.</dd>
     </dl>
   </div>
 </section>
@@ -67,12 +58,12 @@
 <section class="list-visual">
   <div class="inner-box">
     <ul class="list-visual-list">
-    <li class="list-visual-list-item"><img src="../images/list_visual_01.jpg" alt="" class="list-visual-list-img" /></li>
-    <li class="list-visual-list-item"><img src="../images/list_visual_02.jpg" alt="" class="list-visual-list-img" /></li>
-    <li class="list-visual-list-item"><img src="../images/list_visual_03.jpg" alt="" class="list-visual-list-img" /></li>
-    <li class="list-visual-list-item"><img src="../images/list_visual_04.jpg" alt="" class="list-visual-list-img" /></li>
-    <li class="list-visual-list-item"><img src="../images/list_visual_05.jpg" alt="" class="list-visual-list-img" /></li>
-  </ul>
+      <li class="list-visual-list-item"><img src="../images/list_visual_01.jpg" alt="" class="list-visual-list-img" /></li>
+      <li class="list-visual-list-item"><img src="../images/list_visual_02.jpg" alt="" class="list-visual-list-img" /></li>
+      <li class="list-visual-list-item"><img src="../images/list_visual_03.jpg" alt="" class="list-visual-list-img" /></li>
+      <li class="list-visual-list-item"><img src="../images/list_visual_04.jpg" alt="" class="list-visual-list-img" /></li>
+      <li class="list-visual-list-item"><img src="../images/list_visual_05.jpg" alt="" class="list-visual-list-img" /></li>
+    </ul>
   </div>
 </section>
 
