--- a/movie/video_local.02.html
+++ b/movie/video_local.02.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Molle:400i" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css" />
-  <script src="../js/lib/jquery-3.2.1.min.js"></script>
+  <script src="js/lib/jquery-3.2.1.min.js"></script>
   <script src="../js/function.js"></script>
   <style>
 
