--- a/movie/video_local_04.html
+++ b/movie/video_local_04.html
@@ -4,6 +4,20 @@
   <meta charset="UTF-8">
   <title>video tag</title>
   <script src="js/lib/jquery-3.2.1.min.js"></script>
+  <style>
+    .video{
+      position: absolute;
+      right: 0;
+      top: 0;
+      transition: all 1s ease-out;
+    }
+
+    .video:hover{
+      width: 80%;
+      height: 80%;
+    }
+
+  </style>
   <script>
     $(function(){
 
@@ -29,7 +43,7 @@
 
 <!-- 동영상 품질 관리 -->
 <!-- video 태그 관련 attribute -->
-<video class="video" width="560" height="315" autoplay>
+<video id="video" class="video" width="560" height="315" autoplay>
   <source src="src/video1.mp4" type="video/mp4" />
 </video>
 
