--- a/movie/video_youtube_02.html
+++ b/movie/video_youtube_02.html
@@ -10,14 +10,13 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Molle:400i" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css" />
-  <script src="../js/lib/jquery-3.2.1.min.js"></script>
-  <script src="../js/function.js"></script>
+  <script src="js/lib/jquery-3.2.1.min.js"></script>
   <style>
 
     .video-wrap{
       width: 100%;
-      height: 500px;
-      overflow: hidden;
+      /*height: 500px;*/
+      /*overflow: hidden;*/
     }
 
     .video-wrap:after{
@@ -32,7 +31,7 @@
     .video{
       width: 100%;
       position: relative;
-      top: -250px;
+      /*top: -250px;*/
     }
   </style>
 </head>
