--- a/audio_player/audio_player.html
+++ b/audio_player/audio_player.html
@@ -16,6 +16,19 @@
     .btn.pause{
       background-position: -170px -478px;
     }
+
+    .progress{
+      width: 100px;
+      height: 50px;
+      border: 1px solid aquamarine;
+    }
+    .bar{
+      width: 0;
+      height: 50px;
+      background: aquamarine;
+      transition: all .5s linear;
+    }
+
   </style>
   <script src="lib/jquery-3.2.1.min.js"></script>
   <script>
@@ -73,6 +86,15 @@
           }
         });
 
+        // 진행 바 표시
+        var percent = $audio.currentTime / $audio.duration * 100;
+
+        $('.progress .bar').css({
+
+          width : percent + '%'
+
+        });
+
       });
   </script>
 </head>
@@ -82,6 +104,10 @@
 <audio class="audio" controls>
   <source src="audio/audio.mp3" type="audio/mpeg" />
 </audio>
+
+<div class="progress">
+  <div class="bar"></div>
+</div>
 
 <div class="currentTime">00:00</div>
 
